tests/snapshots/cli__reference_files@block__empty.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/block/empty.lox
---
status: 0
stdout:
  - ok
stderr: []
