tests/snapshots/cli__reference_files@block__scope.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/block/scope.lox
---
status: 0
stdout:
  - inner
  - outer
stderr: []
